fix: lua viewer doesn't break when too long

--- a/Styles/torus.css
+++ b/Styles/torus.css
@@ -329,6 +329,7 @@ input {
 
 .lua-viewer {
   color: #afafaf;
+  white-space: pre-wrap;
 }
 
 .lua-string {
